--- a/index.html
+++ b/index.html
@@ -21,12 +21,10 @@
 
 <body>
 
-
-  <!-- top nav bar -->
+    <!-- top nav bar -->
     <div class="top-bar">
-      <div class="top-bar-left">
-        <ul class="menu">
-          <li class="menu-text">
+        <ul class="menu align-middle">
+          <li class="menu-text align-middle">
             <img src="assets/images/test-map-logo.png"/>
           </li>
           <li>
@@ -34,13 +32,15 @@
           </li>
           <li><a href="#">Our Team</a></li>
         </ul>
-      </div>
-      <div class="top-bar-right">
+        <ul class="menu align-center">
+          <li>
+            <h1>Find a COVID Testing Site</h1>
+          </li>
+        </ul>
         <ul class="menu">
           <li><input type="search" placeholder="Search by Zip"></li>
           <li><button type="button" class="button">Search</button></li>
         </ul>
-      </div>
     </div>
 
 
