closing modal when click to get location

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </ul>
     </div>
 
-    <div class="reveal" id="exampleModal1" data-reveal>
+    <div class="reveal" id="my-modal" data-reveal>
       <!-- <-- seaarch box -->
       <div
         class="row grid-x align-center align-middle"
