adding show location button by address in modal

--- a/index.html
+++ b/index.html
@@ -61,15 +61,23 @@
               <option value="ca">California</option>
               <option value="nv">Nevada</option>
               <option value="al">Alabama</option>
-              <option value="ak">Alaska</option>
-            </select>
+              <option value="ak">Alaska</option></select
+            ><button class="button" id="state-location">Show</button>
           </label>
 
+          <br />
           <label>
             Search by Zip
-            <input type="text" placeholder="enter zip code" />
+            <input type="text" placeholder="enter zip code" /><button
+              class="button"
+              id="zip-location"
+            >
+              Show
+            </button>
           </label>
-          <button id="my-location">Show current location</button>
+
+          <br />
+          <button class="button" id="my-location">Show current location</button>
         </div>
       </div>
     </div>
