wiring the input zip code button to the code

--- a/index.html
+++ b/index.html
@@ -68,12 +68,11 @@
           <br />
           <label>
             Search by Zip
-            <input type="text" placeholder="enter zip code" /><button
-              class="button"
-              id="zip-location"
-            >
-              Show
-            </button>
+            <input
+              type="text"
+              placeholder="enter zip code"
+              id="address"
+            /><button class="button" id="zip-location">Show</button>
           </label>
 
           <br />
