wiring show state button to the code

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
           <label
             >Select Your State
-            <select>
+            <select id="state">
               <option value="ca">California</option>
               <option value="nv">Nevada</option>
               <option value="al">Alabama</option>
@@ -68,11 +68,12 @@
           <br />
           <label>
             Search by Zip
-            <input
-              type="text"
-              placeholder="enter zip code"
-              id="address"
-            /><button class="button" id="zip-location">Show</button>
+            <input type="text" placeholder="enter zip code" id="zip" /><button
+              class="button"
+              id="zip-location"
+            >
+              Show
+            </button>
           </label>
 
           <br />
