added a side panel that will display test site information

--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
       </ul>
     </div>
 
+    <!-- Test Site Information  -->
+    <div id="box">
+      <h4> Testing Site Info:</h3>
+        <br>
+      <div id="site-info">
+        <p>Place #1</p>
+        <p>Place 1 info</p>
+        <p>More info...</p>
+      </div>
+    </div>
+
     <div class="reveal" id="my-modal" data-reveal>
       <!-- <-- seaarch box -->
       <div
@@ -80,6 +91,8 @@
           <button class="button" id="my-location">Show current location</button>
         </div>
       </div>
+
+
     </div>
 
     <!-- map background -->
