--- a/index.html
+++ b/index.html
@@ -48,13 +48,11 @@
 
         <!-- Test Site Information  -->
         <div id="box">
-          <h4> Testing Site Info:</h3>
+          <h4 id="title">tbd</h3>
             <br>
-          <div id="site-info">
-            <p>Place #1</p>
-            <p>Place 1 info</p>
-            <p>More info...</p>
-          </div>
+          <div id="site-info-wrapper">
+
+        </div>
         </div>
 
     <div class="reveal" id="my-modal" data-reveal>
