changed info displayed on side bar and added a scroll bar to div

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!-- Test Site Information  -->
         <div id="box">
-          <h4 id="title">tbd</h3>
+          <h4 id="title">Locations near you:</h3>
             <br>
           <div id="site-info-wrapper">
 
