rearranged items in modal

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
         id="location-search-wrapper"
       >
         <div class="cell medium-6 p20" id="location-search-box">
-          <h2>Choose Your State</h2>
+
+          <button class="button" id="my-location">Fetch My Current Location</button>
+          <br>
+          <h2 id="enter-location"> - or - <br>Enter it Below:</h2>
 
           <label
             >Select Your State
@@ -86,7 +89,7 @@
           </label>
 
           <br />
-          <button class="button" id="my-location">Show current location</button>
+          
         </div>
       </div>
     </div>
