css styling changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!-- Test Site Information  -->
         <div id="box">
-          <h4 id="title">Locations near you:</h3>
+          <h4 id="title">Sites Near You:</h3>
             <br>
           <div id="site-info-wrapper">
 
@@ -56,7 +56,7 @@
         </div>
 
     <div class="reveal" id="my-modal" data-reveal>
-      <!-- <-- seaarch box -->
+      <!-- <-- search box -->
       <div
         class="row grid-x align-center align-middle"
         id="location-search-wrapper"
