adding event listender for search button in nav bar

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </li>
       </ul>
       <ul class="menu">
-        <li><input type="search" placeholder="Search by Zip" /></li>
-        <li><button type="button" class="button">Search</button></li>
+        <li><input type="search" id="zip-text" placeholder="Search by Zip" /></li>
+        <li><button type="button" id="search-zip" class="button">Search</button></li>
       </ul>
     </div>
 
