parse past locations from local storage upon page load & create empty HTML div to display it

--- a/index.html
+++ b/index.html
@@ -46,14 +46,23 @@
       </ul>
     </div>
 
-        <!-- Test Site Information  -->
-        <div id="box">
-          <h4 id="title">Sites Near You:</h3>
-            <br>
-          <div id="site-info-wrapper">
+    <!-- Test Site Information  -->
+    <div id="box">
+      <h4 id="title">Sites Near You:</h4>
+      <br>
+      <div id="site-info-wrapper"> 
+        <!-- empty div to populate with data  -->
+      </div>
+    </div>
 
-        </div>
-        </div>
+    <!-- Past Location Buttons  -->
+    <div id="past-locations">
+      <h4 id="title">Your Past Locations</h4>
+      <br>
+      <div id="past-locations"> 
+        <!-- empty div to populate with buttons for past locations  -->
+      </div>
+    </div>
 
     <div class="reveal" id="my-modal" data-reveal>
       <!-- <-- search box -->
