get data from local storage and render new buttons for each item

--- a/index.html
+++ b/index.html
@@ -62,16 +62,10 @@
     <div id="past-locations" class="row align-bottom align-right">
       <!-- Past Location Buttons  -->
       <div  class="cell medium-3  p50">
-        <h4 id="title">Your Past Locations</h4>
-        <br>
+        <h4 id="title">Your Saved Locations</h4>
+      
         <div id="past-location-buttons-div"> 
           <!-- empty div to populate with buttons for past locations  -->
-          <button>Past locale</button>
-          <button>Past locale</button>
-          <button>Past locale</button>
-
-          <br>
-
 
         </div>
       </div>
