adding media queries on small and medium devices for get tested button and sites near me

--- a/index.html
+++ b/index.html
@@ -41,32 +41,34 @@
         </li>
       </ul>
       <ul class="menu">
-        <li><input type="search" id="zip-text" placeholder="Search by Zip" /></li>
-        <li><button type="button" id="search-zip" class="button">Search</button></li>
+        <li>
+          <input type="search" id="zip-text" placeholder="Search by Zip" />
+        </li>
+        <li>
+          <button type="button" id="search-zip" class="button">Search</button>
+        </li>
       </ul>
     </div>
 
     <!-- map as background -->
     <div id="map"></div>
-  
-      <!-- Test Site Information  -->
-      <div id="box">
-        <h4 id="title">Sites Near You:</h4>
-        <br>
-        <div id="site-info-wrapper"> 
-          <!-- empty div to populate with data  -->
-        </div>
-      </div>
 
+    <!-- Test Site Information  -->
+    <div id="box">
+      <h4 id="title">Sites Near You:</h4>
+      <br />
+      <div id="site-info-wrapper">
+        <!-- empty div to populate with data  -->
+      </div>
+    </div>
 
     <div id="past-locations" class="row align-bottom align-right">
       <!-- Past Location Buttons  -->
-      <div  class="cell medium-3  p50">
+      <div class="cell medium-3 p50">
         <h4 id="title">Your Saved Locations</h4>
-      
-        <div id="past-location-buttons-div"> 
-          <!-- empty div to populate with buttons for past locations  -->
 
+        <div id="past-location-buttons-div">
+          <!-- empty div to populate with buttons for past locations  -->
         </div>
       </div>
     </div>
@@ -78,10 +80,11 @@
         id="location-search-wrapper"
       >
         <div class="cell medium-6 p20" id="location-search-box">
-
-          <button class="button" id="my-location">Fetch My Current Location</button>
-          <br>
-          <h2 id="enter-location"> - or - <br>Enter it Below:</h2>
+          <button class="button" id="my-location">
+            Fetch My Current Location
+          </button>
+          <br />
+          <h2 id="enter-location">- or - <br />Enter it Below:</h2>
 
           <label
             >Select Your State
@@ -105,12 +108,9 @@
           </label>
 
           <br />
-          
         </div>
       </div>
     </div>
-
-
 
     <!-- JQUERY js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -134,6 +134,3 @@
     ></script>
   </body>
 </html>
-
-
-
