--- a/index.html
+++ b/index.html
@@ -83,53 +83,53 @@
             <option value="al">Alabama</option>
             <option value="ak">Alaska</option>
             <option value="az">Arizona</option>
-            <option value="">Arkansas</option>
+            <option value="ar">Arkansas</option>
             <option value="ca">California</option>
-            <option value="">Colorado</option>
-            <option value="">Connecticut</option>
-            <option value="">Delaware</option>
-            <option value="">Florida</option>
-            <option value="">Georgia</option>
-            <option value="">Hawaii</option>
-            <option value="">Idaho</option>
-            <option value="">Illinois</option>
-            <option value="">Indiana</option>
-            <option value="">Iowa</option>
-            <option value="">Kansas</option>
-            <option value="">Kentucky</option>
-            <option value="">Louisiana</option>
-            <option value="">Maine</option>
-            <option value="">Maryland</option>
-            <option value="">Massachusetts</option>
-            <option value="">Michigan</option>
-            <option value="">Minnesota</option>
-            <option value="">Mississippi</option>
-            <option value="">Missouri</option>
-            <option value="">Montana</option>
-            <option value="">Nebraska</option>
+            <option value="co">Colorado</option>
+            <option value="ct">Connecticut</option>
+            <option value="de">Delaware</option>
+            <option value="fl">Florida</option>
+            <option value="ga">Georgia</option>
+            <option value="hi">Hawaii</option>
+            <option value="id">Idaho</option>
+            <option value="il">Illinois</option>
+            <option value="in">Indiana</option>
+            <option value="ia">Iowa</option>
+            <option value="ks">Kansas</option>
+            <option value="ky">Kentucky</option>
+            <option value="la">Louisiana</option>
+            <option value="me">Maine</option>
+            <option value="md">Maryland</option>
+            <option value="ma">Massachusetts</option>
+            <option value="mi">Michigan</option>
+            <option value="mn">Minnesota</option>
+            <option value="ms">Mississippi</option>
+            <option value="mo">Missouri</option>
+            <option value="mt">Montana</option>
+            <option value="ne">Nebraska</option>
             <option value="nv">Nevada</option>
-            <option value="">New Hampshire</option>
-            <option value="">New Jersey</option>
-            <option value="">New Mexico</option>
-            <option value="">New York</option>
-            <option value="">North Carolina</option>
-            <option value="">North Dakota</option>
-            <option value="">Ohio</option>
-            <option value="">Oklahoma</option>
-            <option value="">Oregon</option>
-            <option value="">Pennsylvania</option>
-            <option value="">Rhode Island</option>
-            <option value="">South Carolina</option>
-            <option value="">South Dakota</option>
-            <option value="">Tennessee</option>
-            <option value="">Texas</option>
-            <option value="">Utah</option>
-            <option value="">Vermont</option>
-            <option value="">Virginia</option>
-            <option value="">Washington</option>
-            <option value="">West Virginia</option>
-            <option value="">Wisconsin</option>
-            <option value="">Wyoming</option>
+            <option value="nh">New Hampshire</option>
+            <option value="nj">New Jersey</option>
+            <option value="nm">New Mexico</option>
+            <option value="ny">New York</option>
+            <option value="nc">North Carolina</option>
+            <option value="nd">North Dakota</option>
+            <option value="oh">Ohio</option>
+            <option value="ok">Oklahoma</option>
+            <option value="or">Oregon</option>
+            <option value="pa">Pennsylvania</option>
+            <option value="ri">Rhode Island</option>
+            <option value="sc">South Carolina</option>
+            <option value="sd">South Dakota</option>
+            <option value="tn">Tennessee</option>
+            <option value="tx">Texas</option>
+            <option value="ut">Utah</option>
+            <option value="vt">Vermont</option>
+            <option value="va">Virginia</option>
+            <option value="wa">Washington</option>
+            <option value="wv">West Virginia</option>
+            <option value="wi">Wisconsin</option>
+            <option value="wy">Wyoming</option>
 
           </select> <button class="button" id="state-location">Show</button>
         </label>
