added links to html that will allow form validation feature to run properly

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css"
     crossorigin="anonymous" />
 
+  <!-- PARSLEY js -->
+  <script src="http://parsleyjs.org/dist/parsley.js"></script>
+
   <!-- CUSTOM css-->
   <link rel="stylesheet" href="assets/style.css" />
 </head>
@@ -158,6 +161,9 @@
 
   <!-- CUSTOM JS-->
   <script src="assets/script.js"></script>
+
+  <!-- PARSLEY js -->
+  <script src="/parsley.min.js"></script>
 
   <!--GOOGLE map -->
   <script async defer
