added form validation functionality

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     </ul>
     <ul class="menu">
       <li>
-        <input type="search" id="zip-text" placeholder="Search by Zip" />
+        <form data-parsley-validate id="form">
+        <input type="number" id="zip-text" placeholder="Search by Zip" data-parsley-type="integer" data-parsley-length="[5, 5]"/>
+        </form>
       </li>
       <li>
         <button type="button" id="search-zip" class="button">Search</button>
@@ -140,7 +142,9 @@
         <br />
         <label>
           Search by Zip
-          <input type="text" placeholder="enter zip code" id="zip" /><button class="button" id="zip-location">
+          <form>
+          <input type="number" placeholder="enter zip code" id="zip" data-parsley-type="integer" data-parsley-length="[5, 5]"/><button class="button" id="zip-location">
+          </form>
             Show
           </button>
         </label>
