--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Map-A-Test: Find a COVID Testing Site Near Me</title>
+    <title>Map-A-Test: About the Data and About Our Team</title>
 
     <!-- JQUERY css-->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -48,8 +48,8 @@
     <br>
 
 
-    
 
+  <!-- DATA ABOUT-->
     <div class="grid-x">
       <div class="cell">
         <h2>About the Data</h2>
@@ -60,6 +60,10 @@
       <div class="cell medium-6">
         <h3>Here Developer API</h3>
       </div>
+
+      <br>
+
+      <!-- TEAM ABOUT -->
       <div class="cell">
         <h2>
           About Our Team
@@ -76,8 +80,6 @@
       </div>
     </div>
 
-
-    
 
 
 
