add Foundation card elements to about page, additional styling and layout

--- a/about.html
+++ b/about.html
@@ -47,38 +47,80 @@
     <br>
     <br>
 
+    <main>
 
 
-  <!-- DATA ABOUT-->
-    <div class="grid-x">
-      <div class="cell">
-        <h2>About the Data</h2>
-      </div>
-      <div class="cell medium-6">
-        <h3>Google Maps API</h3>
-      </div>
-      <div class="cell medium-6">
-        <h3>Here Developer API</h3>
-      </div>
 
-      <br>
+      <!-- DATA ABOUT-->
+      <div class="grid-x">
+        <div class="cell medium-8">
+          <h2>About the Data</h2>
+        </div>
 
-      <!-- TEAM ABOUT -->
-      <div class="cell">
-        <h2>
-          About Our Team
-        </h2>
+        <div class="cell medium-4 float-right">
+          <img src="assets/images/test-graphic.png" />
+        </div>
+
+        <div class="cell card medium-5">
+          <div class="card-section">
+            <img src="assets/images/test-graphic.png">
+          </div>
+          <div class="card-section">
+            <h3>Google Maps API</h3>
+            <p>This is a simple card with an image inside a `.card-section`.</p>
+          </div>
+        </div>
+
+        <div class="cell card medium-5">
+          <div class="card-section">
+            <img src="assets/images/test-graphic.png">
+          </div>
+          <div class="card-section">
+            <h3>Here Developer API</h3>
+            <p>This is a simple card with an image inside a `.card-section`.</p>
+          </div>
+        </div>
+
+        <br>
+
+        <!-- TEAM ABOUT -->
+        <div class="cell">
+          <h2>
+            About Our Team
+          </h2>
+        </div>
+
+        <div class="cell card medium-3">
+          <div class="card-section">
+            <img src="assets/images/test-graphic.png">
+          </div>
+          <div class="card-section">
+            <h3>Leslie</h3>
+            <p>This is a simple card with an image inside a `.card-section`.</p>
+          </div>
+        </div>
+
+        <div class="cell card medium-3">
+          <div class="card-section">
+            <img src="assets/images/test-graphic.png">
+          </div>
+          <div class="card-section">
+            <h3>Iman</h3>
+            <p>This is a simple card with an image inside a `.card-section`.</p>
+          </div>
+        </div>
+
+        <div class="cell card medium-3">
+          <div class="card-section">
+            <img src="assets/images/test-graphic.png">
+          </div>
+          <div class="card-section">
+            <h3>Lauren</h3>
+            <p>This is a simple card with an image inside a `.card-section`.</p>
+          </div>
+        </div>
       </div>
-      <div class="cell medium-4">
-        <h3>Leslie</h3>
-      </div>
-      <div class="cell medium-4">
-        <h3>Iman</h3>
-      </div>
-      <div class="cell medium-4">
-        <h3>Lauren</h3>
-      </div>
-    </div>
+    </main>
 
 
 
