redirect functionality for search bar on side pages

--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
           </li>
         </ul>
         <ul class="menu align-middle">
-          <li><input type="search" placeholder="Search by Zip"></li>
-          <li><button type="button" class="button">Search</button></li>
+          <li><input type="search" id="side-page-input" placeholder="Search by Zip"></li>
+          <li><button type="button" id="side-page-button" class="button">Search</button></li>
         </ul>
     </div>
 
