--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
     <div class="top-bar">
       <ul class="menu align-middle">
         <li class="menu-text align-middle">
-          <img src="assets/images/test-map-logo.png" />
+          <a href="index.html"><img src="assets/images/test-map-logo.png" /></a>
         </li>
         <li>
-          <a href="about.html" target="_blank">About this Data</a>
+          <a href="about.html" target="_blank">About this Project</a>
         </li>
-        <li><a href="#">Our Team</a></li>
       </ul>
       <ul class="menu align-center">
         <li>
