readded form validation to main modal

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
       </ul>
       <ul class="menu">
         <li>
-          <form class="form">
+
+          <div class="form">
             <!-- data-parsley-type="integer" data-parsley-length="[5, 5]" -- this was previously added to input -->
             <input type="number" id="zip-text" placeholder="Search by Zip" />
-          </form>
+          </div>
         </li>
         <li>
           <button type="button" id="search-zip" class="button">Search</button>
