--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       <ul class="menu">
         <li>
 
-          <div class="form">
-            <!-- data-parsley-type="integer" data-parsley-length="[5, 5]" -- this was previously added to input -->
-            <input type="number" id="zip-text" placeholder="Search by Zip" />
+          <div data-parsley-validate class="form">
+            <input type="number" placeholder="Search by Zip" id="zip-text" data-parsley-type="integer"
+            data-parsley-length="[5, 5]"/>
           </div>
         </li>
         <li>
@@ -156,7 +156,6 @@
         <div data-parsley-validate id="form">
           <input type="number" placeholder="enter zip code" id="zip" data-parsley-type="integer"
             data-parsley-length="[5, 5]" />
-
           <button class="button" id="zip-location">Show</button>
         </div>
       </div>
