updated my personal links on about me page

--- a/about.html
+++ b/about.html
@@ -108,8 +108,8 @@
           <div class="card-section">
             <h3>Leslie</h3>
             <p>
-              <a href="#"><button>Linkedin</button></a>
-              <a href="#"><button>GitHub</button></a>
+              <a href="https://www.linkedin.com/in/lesliejpatino/"><button>Linkedin</button></a>
+              <a href="https://github.com/lesliejpatino"><button>GitHub</button></a>
             </p>
           </div>
         </div>
