--- a/about.html
+++ b/about.html
@@ -22,38 +22,34 @@
 <body>
 
     <!-- top nav bar -->
+
     <div class="top-bar">
-        <ul class="menu align-middle">
-          <li class="menu-text align-middle">
-            <a href="index.html">
-              <img src="assets/images/test-map-logo.png"/>
-            </a>
-          </li>
-        </ul>
-        <ul class="menu align-center">
-          <li>
-            <h1>Find a COVID Testing Site</h1>
-          </li>
-        </ul>
-        <ul class="menu align center">
-          <li>
-            <div data-parsley-validate id="side-form">
-              <input type="number" placeholder="enter zip code" id="side-page-input" data-parsley-type="integer"
-                data-parsley-length="[5, 5]" />
-              <button class="button" id="side-page-button">SEARCH</button>
-            </div>
-          </li>
-        </ul>
+      <ul class="menu align-middle">
+        <li class="menu-text align-middle">
+          <a href="index.html"><img src="assets/images/test-map-logo.png" /></a>
+        </li>
+      </ul>
+      <ul class="menu align-center">
+        <li>
+          <h1>Find a COVID Testing Site</h1>
+        </li>
+      </ul>
+      <ul class="menu">
+        <li>
+
+          <div data-parsley-validate class="form">
+            <input type="number" placeholder="Search by Zip" id="side-page-input" data-parsley-type="integer"
+            data-parsley-length="[5, 5]"/>
+          </div>
+        </li>
+        <li>
+          <button type="button" id="side-page-button" class="button">Search</button>
+        </li>
+      </ul>
     </div>
 
-    <br>
-    <br>
-    <br>
 
     <main>
-
-
-
       <!-- DATA ABOUT-->
       <div class="grid-x">
         <div class="cell medium-8">
