refactor css and css media queries to be mobile first

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- <script src="http://parsleyjs.org/dist/parsley.js"></script> -->
 
     <!-- CUSTOM css-->
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/responsive.css" />
   </head>
 
   <body>
